wallet_core/tests_integration/tests/snapshots/gba_pid@999991000.snap
---
source: tests_integration/tests/gba_pid_test.rs
assertion_line: 184
description: "BSN: 999991000"
expression: attributes
---
com.example.pid__given_name:
  String: "Liselotte-Anne Daniëlle Celèste Elise 26 Avril Stéphane Maroni jr. Isiah dé Maria de las Mercedes Rosalía J'adore Grace a Dieu Rhiannon San-che-he-ray Lou'Lou Elona L'vovna d'Alessandra Ariëlle"
com.example.pid__family_name:
  String: "voor in 't C"
com.example.pid__gender:
  Gender: Female
com.example.pid__birth_date:
  Date: 1990-07-07
com.example.pid__age_over_18:
  Boolean: true
com.example.pid__bsn:
  String: "999991000"
com.example.address__resident_street:
  String: Burgemeester Jonkheer Hesselt van Dinterstraat
com.example.address__resident_house_number:
  String: "1"
com.example.address__resident_postal_code:
  String: 2631BR
com.example.address__resident_city:
  String: Nootdorp
com.example.address__resident_country:
  String: Nederland
