wallet_core/tests_integration/tests/snapshots/gba_pid@999991243.snap
---
source: tests_integration/tests/gba_pid_test.rs
assertion_line: 174
description: "BSN: 999991243"
expression: attributes
---
com.example.pid__given_name:
  String: Remi
com.example.pid__family_name:
  String: Zaal
com.example.pid__own_family_name:
  String: Zaal
com.example.pid__gender:
  Gender: Male
com.example.pid__birth_date:
  Date: 2002-02-02
com.example.pid__age_over_18:
  Boolean: true
com.example.pid__has_spouse_or_partner:
  Boolean: false
com.example.pid__bsn:
  String: "999991243"
com.example.address__resident_street:
  String: Johan de Wittlaan
com.example.address__resident_house_number:
  String: "22"
com.example.address__resident_postal_code:
  String: 2517JR
com.example.address__resident_city:
  String: "'s-Gravenhage"
com.example.address__resident_country:
  String: Nederland
