wallet_core/tests_integration/tests/snapshots/gba_pid@999991292.snap
---
source: tests_integration/tests/gba_pid_test.rs
assertion_line: 171
description: "BSN: 999991292"
expression: attributes
---
given_name:
  String: Mirjam
family_name:
  String: Heijn
own_family_name:
  String: Heijn
gender:
  Gender: Female
birth_date:
  Date: 1974-03-04
age_over_18:
  Boolean: true
has_spouse_or_partner:
  Boolean: false
bsn:
  String: "999991292"
resident_street:
  String: Eemhavenweg
resident_house_number:
  String: "14"
resident_postal_code:
  String: 3089KG
resident_city:
  String: Rotterdam
resident_country:
  String: Nederland
