wallet_core/tests_integration/tests/snapshots/gba_pid@999991644.snap
---
source: tests_integration/tests/gba_pid_test.rs
assertion_line: 158
description: "BSN: 999991644"
expression: attributes
---
given_name:
  String: Petrus Wilhelmus Adrianus
family_name:
  String: Bakker
own_family_name:
  String: Bakker
gender:
  Gender: Male
birth_date:
  Date: 1956-08-01
age_over_18:
  Boolean: true
has_spouse_or_partner:
  Boolean: false
bsn:
  String: "999991644"
resident_street:
  String: Ruychrocklaan
resident_house_number:
  String: "4"
resident_postal_code:
  String: 2597EN
resident_city:
  String: "'s-Gravenhage"
resident_country:
  String: Nederland
