wallet_core/tests_integration/tests/snapshots/gba_pid@999991772.snap
---
source: tests_integration/tests/gba_pid_test.rs
assertion_line: 184
description: "BSN: 999991772"
expression: attributes
---
com.example.pid__given_name:
  String: Frouke
com.example.pid__family_name:
  String: Jansen
com.example.pid__gender:
  Gender: Female
com.example.pid__birth_date:
  Date: 2000-03-24
com.example.pid__age_over_18:
  Boolean: true
com.example.pid__bsn:
  String: "999991772"
com.example.address__resident_street:
  String: Groenewoudsedijk
com.example.address__resident_house_number:
  String: "51"
com.example.address__resident_postal_code:
  String: 3528BG
com.example.address__resident_city:
  String: Utrecht
com.example.address__resident_country:
  String: Nederland
