wallet_core/tests_integration/tests/snapshots/gba_pid@999991802.snap
---
source: tests_integration/tests/gba_pid_test.rs
assertion_line: 173
description: "BSN: 999991802"
expression: attributes
---
com.example.pid__given_name:
  String: Frans
com.example.pid__family_name:
  String: "in 't Veld"
com.example.pid__own_family_name:
  String: "in 't Veld"
com.example.pid__gender:
  Gender: Male
com.example.pid__birth_date:
  Date: 1990-09-20
com.example.pid__age_over_18:
  Boolean: true
com.example.pid__bsn:
  String: "999991802"
com.example.address__resident_street:
  String: Hunzestraat
com.example.address__resident_house_number:
  String: "87"
com.example.address__resident_postal_code:
  String: 1079VW
com.example.address__resident_city:
  String: Amsterdam
com.example.address__resident_country:
  String: Nederland
